package flc;

public enum BookingStatus {
    BOOKED,
    CHANGED,
    ATTENDED,
    CANCELLED
}
