package flc;

public enum Day {
    SATURDAY,
    SUNDAY
}
