package flc;

public enum ExerciseType {
    YOGA,
    ZUMBA,
    AQUACISE,
    BOX_FIT,
    BODY_BLITZ
}
