package flc;

public enum TimeSlot {
    MORNING,
    AFTERNOON,
    EVENING
}
